--- a/QualificationUtils/QualificationUtils/QualificationUtils.csproj
+++ b/QualificationUtils/QualificationUtils/QualificationUtils.csproj
@@ -9,12 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QualificationUtils</RootNamespace>
     <AssemblyName>QualificationUtils</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>false</Deterministic>
     <TargetFrameworkProfile />
     <LangVersion>7.1</LangVersion>
-    <TPHRootFolder>E:\Program Files (x86)\SteamLibrary\SteamApps\common\TPH</TPHRootFolder>
+    <TPHRootFolder>D:\SteamLibrary\steamapps\common\TPH</TPHRootFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,8 +38,8 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony12">
-      <HintPath>$(TPHRootFolder)\TPH_Data\Managed\0Harmony12.dll</HintPath>
+    <Reference Include="Harmony12">
+      <HintPath>$(TPHRootFolder)\TPH_Data\Managed\UnityModManager\0Harmony12.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
