Refactor project structure and update build output
Moved MOD_FLOWCHART.md and README.md to the project root for better organization. Updated QualificationUtils.csproj to use a configurable ModsFolder path based on TPHRootFolder, and set build output to the TPH mods directory for both Debug and Release. Removed the post-build XCOPY event. Expanded README with detailed configuration instructions for setting the TPH installation path and verifying DLL references.

--- a/QualificationUtils/QualificationUtils/QualificationUtils.csproj
+++ b/QualificationUtils/QualificationUtils/QualificationUtils.csproj
@@ -15,12 +15,13 @@
     <TargetFrameworkProfile />
     <LangVersion>7.1</LangVersion>
     <TPHRootFolder>D:\SteamLibrary\steamapps\common\TPH</TPHRootFolder>
+    <ModsFolder>$(TPHRootFolder)\Mods\QualificationUtils</ModsFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>$(ModsFolder)</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,7 +31,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>$(ModsFolder)</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -86,7 +87,4 @@
     <Compile Include="Patches\InspectorMenu_Inspect_Patch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>start XCOPY /Y /R "$(TargetDir)" "$(TPHRootFolder)\Mods\$(ProjectName)\"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
